BUGFIX: Fix copy exercise form spacing

--- a/app/templates/Exercise/Copy.html.twig
+++ b/app/templates/Exercise/Copy.html.twig
@@ -1,4 +1,5 @@
 {% extends 'BaseFullscreen.html.twig' %}
+{% block layoutCssClass %}main--with-footer{% endblock %}
 
 {% block title %}{{ "exercise.edit.title"|trans({}, 'DegreeBase') }}{% endblock %}
 
